--- a/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -674,6 +674,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# A New Approach\n",
+    "\n",
+    "\n",
+    "What follows is code (or, for now, a draft thereof) that will compute the Magnetic field *everywhere* without the use of numerous header files to handle the edge and vertex cases. To do so, we will determine whether each necessary FD template will run off the grid as a first step, then compensate accordingly. Here, the function `driver_A_to_B()` consists of the typical logic we use for BCs to make sure we hit each point in the boundary. In the macro `compute_A2B()`, We loop over a  subset of points passed to the macro from the driver function. At each point, we consider the derivatives in each of the three directions that we will need to compute the curl; if we are on the edge of the grid, we will shift the stencil we use on point so that it no longer extends to outside our computational domain. Once we have all the derivatives we will need, we simply calculate the magnetic field as we otherwise would.\n",
+    "\n",
+    "**Current things to address**\n",
+    "* Optimizing the decision tree\n",
+    "    * List most common cases first\n",
+    "    * Can this be done with switch statements?\n",
+    "* Is there a preference whether `compute_A2B` is a macro or function\n",
+    "* Validate new algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-1-58e48bf32933>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-58e48bf32933>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile $outdir/driver_AtoB_new.c\n",
+    "#define  compute_A2B(i0min,i0max, i1min,i1max, i2min,i2max) \\\n",
+    "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\n",
+    "      int dx_Ay,dx_Az,dy_Ax,dy_Az,dz_Ax,dz_Ay; \\\n",
+    "      if (i0==0) { \\\n",
+    "          dx_Ay = invdx0*(-3.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD1GF, i0+1,i1,i2)] - 1.0/2.0*in_gfs[IDX4(AD1GF, i0+2,i1,i2)]); \\\n",
+    "          dx_Az = invdx0*(-3.0/2.0*in_gfs[IDX4(AD2GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD2GF, i0+1,i1,i2)] - 1.0/2.0*in_gfs[IDX4(AD2GF, i0+2,i1,i2)]); \\\n",
+    "      } \\\n",
+    "      else if (i0==Nxx_plus_2NGHOSTS0-1) { \\\n",
+    "          dx_Ay = invdx0*((3.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD1GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0-2,i1,i2)]); \\\n",
+    "          dx_Az = invdx0*((3.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD2GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0-2,i1,i2)]); \\\n",
+    "      } \\\n",
+    "      else { \\\n",
+    "          dx_Ay = invdx0*(-1.0/2.0*in_gfs[IDX4(AD1GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0+1,i1,i2)]); \\\n",
+    "          dx_Az = invdx0*(-1.0/2.0*in_gfs[IDX4(AD2GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0+1,i1,i2)]); \\\n",
+    "      } \\\n",
+    "      if (i1==0) { \\\n",
+    "          dy_Ax = invdx1*(-3.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD0GF, i0,i1+1,i2)] - 1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1+2,i2)]); \\\n",
+    "          dy_Az = invdx1*(-3.0/2.0*in_gfs[IDX4(AD2GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD2GF, i0,i1+1,i2)] - 1.0/2.0*in_gfs[IDX4(AD2GF, i0,i1+2,i2)]); \\\n",
+    "      } \\\n",
+    "      else if (i1==Nxx_plus_2NGHOSTS1-1) { \\\n",
+    "          dy_Ax = invdx1*((3.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD0GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1-2,i2)]); \\\n",
+    "          dy_Az = invdx1*((3.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD2GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1-2,i2)]); \\\n",
+    "      } \\\n",
+    "      else { \\\n",
+    "          dy_Ax = invdx1*(-1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1+1,i2)]); \\\n",
+    "          dy_Az = invdx1*(-1.0/2.0*in_gfs[IDX4(AD2GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1+1,i2)]); \\\n",
+    "      } \\\n",
+    "      if (i2==0) { \\\n",
+    "          dz_Ax = invdx2*(-3.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD0GF, i0,i1,i2+1)] - 1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2+2)]); \\\n",
+    "          dz_Ay = invdx2*(-3.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD1GF, i0,i1,i2+1)] - 1.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2+2)]); \\\n",
+    "      } \\\n",
+    "      else if (i2==Nxx_plus_2NGHOSTS2-1) { \\\n",
+    "          dz_Ax = invdx2*((3.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD0GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2-2)]); \\\n",
+    "          dz_Ay = invdx2*((3.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD1GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2-2)]); \\\n",
+    "      } \\\n",
+    "      else { \\\n",
+    "          dz_Ax = invdx2*(-1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2+1)]); \\\n",
+    "          dz_Ay = invdx2*(-1.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2+1)]); \\\n",
+    "      } \\\n",
+    "      const double gammadet = auxevol_gfs[IDX4(GAMMADETGF, i0,i1,i2)]; \\\n",
+    "      out_gfs[IDX4(BU0GF, i0,i1,i2)] = (dy_Az-dz_Ay)/gammadet; \\\n",
+    "      out_gfs[IDX4(BU1GF, i0,i1,i2)] = (dz_Ax-dx_Az)/gammadet; \\\n",
+    "      out_gfs[IDX4(BU2GF, i0,i1,i2)] = (dx_Ay-dy_Ax)/gammadet; \\\n",
+    "  }\n",
+    "\n",
+    "void driver_A_to_B(const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict out_gfs) {\n",
+    "#include \"set_Cparameters.h\"\n",
+    "    const REAL invdx0 = 1.0 / dxx0;\n",
+    "    const REAL invdx1 = 1.0 / dxx1;\n",
+    "    const REAL invdx2 = 1.0 / dxx2;\n",
+    "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
+    "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
+    "#pragma omp parallel for\n",
+    "    for(int i2=imin[2];i2<imax[2];i2++) for(int i1=imin[1];i1<imax[1];i1++) for(int i0=imin[0];i0<imax[0];i0++) {\n",
+    "        // Should probably generalize this later to allow for other orders.\n",
+    "#include \"B_from_A_order2.h\"\n",
+    "    }\n",
+    "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "        // After updating each face, adjust imin[] and imax[] \n",
+    "        //   to reflect the newly-updated face extents.\n",
+    "        compute_A2B(imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2]); imin[0]--;\n",
+    "        compute_A2B(imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2]); imax[0]++;\n",
+    "\n",
+    "        compute_A2B(imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2]); imin[1]--;\n",
+    "        compute_A2B(imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2]); imax[1]++;\n",
+    "\n",
+    "        compute_A2B(imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2]); imin[2]--;\n",
+    "        compute_A2B(imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1); imax[2]++;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
