--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +154,11 @@
     "\n",
     "import Min_Max_and_Piecewise_Expressions as noif\n",
     "bound = sp.Rational(1,10)\n",
+    "\n",
+    "# A_x = 0, A_y = 0\n",
+    "# A_z = y+ (-x-0.0075) if x <= -0.1\n",
+    "#          (0.75x^2 - 0.85x) if -0.1 < x <= 0.1 \n",
+    "#          (-0.7x-0.0075) if x > 0.1 \n",
     "\n",
     "Azleft = y - x - sp.Rational(75,10000)\n",
     "Azcenter = y + sp.Rational(75,100)*x*x - sp.Rational(85,100)*x\n",
@@ -189,10 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# B^x(0,x) = 1.0\n",
+    "# B^y(0,x) = 1.0 if x <= -0.1\n",
+    "#            1.0-1.5(x+0.1) if -0.1 < x <= 0.1\n",
+    "#            0.7 if x > 0.1\n",
+    "# B^z(0,x) = 0\n",
+    "\n",
     "Byleft = sp.sympify(1)\n",
     "Bycenter = sp.sympify(1) - sp.Rational(15,10)*(x+sp.Rational(1,10))\n",
     "Byright = sp.Rational(7,10)\n",
@@ -215,22 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ixp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-637876e4c230>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mEU\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzerorank1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mEU\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msympify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mEU\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msympify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mEU\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mBU\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ixp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# E^x(0,x) = 0.0 , E^y(x) = 0.0 , E^z(x) = -B^y(0,x)\n",
     "EU = ixp.zerorank1()\n",
     "EU[0] = sp.sympify(0)\n",
     "EU[1] = sp.sympify(0)\n",
@@ -251,18 +251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
-    "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "# Define Levi-Civita symbol\n",
+    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
+    "    if DIM == -1:\n",
+    "        DIM = par.parval_from_str(\"DIM\")\n",
+    "\n",
+    "    LeviCivitaSymbol = ixp.zerorank3()\n",
+    "\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for k in range(DIM):\n",
+    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
+    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
+    "    return LeviCivitaSymbol\n",
+    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
+    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
     "\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(3):\n",
     "    # In flat spacetime, gamma_{ij} is just a Kronecker delta\n",
     "    B2 += BU[i]**2 # This is trivial to extend to curved spacetime\n",
     "\n",
+    "# v^i = [ijk] (E^j B^k) / (B^2)\n",
     "ValenciavU = ixp.zerorank1()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
@@ -276,18 +290,18 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 5: Code Validation against `GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests` NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Code Validation against `GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_fast_wave` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` Aligned Rotator initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [`GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py`](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py) module.\n",
+    "2. the NRPy+ [`GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_fast_wave.py`](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_fast_wave.py) module.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,8 +323,8 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests as gfho\n",
-    "gfho.GiRaFFEfood_NRPy_1D_tests()\n",
+    "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_fast_wave as gfho\n",
+    "gfho.GiRaFFEfood_NRPy_1D_tests_fast_wave()\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -335,20 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-GiRaFFEfood_NRPy_1D_tests.tex, and compiled LaTeX file to PDF file Tutorial-GiRaFFEfood_NRPy_1D_tests.pdf\n"
+      "Created Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.tex, and compiled LaTeX file to PDF file Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.pdf\n"
      ]
     }
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_1D_tests\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave\")"
    ]
   }
  ],
